github pages yollari duzeltildi manifest+sw

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Ercan BRGR Envanter",
   "short_name": "BRGR Envanter",
   "description": "Ercan BRGR Günlük Envanter Takip Sistemi",
-  "start_url": "/",
+  "start_url": "/envanter-site/",
+  "scope": "/envanter-site/",
   "display": "standalone",
   "background_color": "#1a1a2e",
   "theme_color": "#e85d04",
