--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Ercan BRGR Envanter",
-  "short_name": "BRGR Envanter",
-  "description": "Ercan BRGR Günlük Envanter Takip Sistemi",
-  "start_url": "/envanter-site/",
-  "scope": "/envanter-site/",
+  "name": "Envanter Takip",
+  "short_name": "Envanter",
+  "description": "Günlük Envanter Takip Sistemi",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#1a1a2e",
   "theme_color": "#e85d04",
